compiler/tests/compiler/must_fail/t_21.mil
/* function call with wrong return type */

fn bar() -> reg u64 {
  x : reg u64;
  x = 42;
  return x;
}

fn foo() {
  x : stack u64;
  x = bar();
}

/*
START:CMD
ARG="typecheck"
END:CMD
*/
